:recycle: move units into locale file